crates/connectors/ndc-cockroach/tests/snapshots/query_tests__predicates__select_where_name_iregex.snap
---
source: crates/connectors/ndc-cockroach/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 6,
        "Title": "Jagged Little Pill"
      }
    ]
  }
]
